Changes on the website description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Download mod packages for Minecraft quickly and easily. Export/import your packaging or convert a mrpack to a zip file with all mods and overrides included.">
     <title>MODPKG — Home</title>
   </head>
   <body>
